# microphone-library-for-pico

./: CMakeLists.txt  README.md  maurol.dariii
.github/: stale.yml
examples/analog_usb_microphone/: CMakeLists.txt  main.c
examples/hello_analog_microphone/: main.c
examples/hello_i2s_microphone/: CMakeLists.txt  Wav.c  Wav.h  main.c
examples/hello_i2s_microphone/hello_pdm_microphone/: CMakeLists.txt
examples/hello_pdm/: CMakeLists.txt  main.c
examples/hello_pdm_microphone/: main.c
examples/usb_i2s_microphone/: CMakeLists.txt  main.c
examples/usb_microphone/: CMakeLists.txt  main.c  tusb_config.h  usb_descriptors.c  usb_microphone.c  usb_microphone.h
src/: analog_microphone.c  i2s_microphone.c  pdm-microphone.c  pdm-microphone.pio  pdm_microphone.c  pdm_microphone.pio
src/OpenPDM2PCM/: OpenPDMFilter.h
src/include/pico/: analog_microphone.h  i2s_microphone.h  machine_i2s.c  pdm_microphone.h
src/include/pico/microphone/: pdm.h
